--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:red">
+  <body style="background-color:gray">
     <h2>Hello, Chris!</h2>
+    <p>This is version 1.1</p>
   </body>
 </html>
