--- a/content/index.html
+++ b/content/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:gray">
+  <body style="background-color:rgb(255, 255, 204)">
     <h2>Hello, Chris!</h2>
-    <p>This is version 1.1</p>
+    <p>This is version 1.2</p>
   </body>
 </html>
